--- a/.github/workflows/torrenttools.yml
+++ b/.github/workflows/torrenttools.yml
@@ -3,19 +3,19 @@ on:
   workflow_dispatch:
     inputs:
       name:
-        description: Name of the torrent file
+        description: Basta
         required: true
         default: Firefox Setup 95.0.1
       comment:
-        description: Comment
+        description: 'Comment'
         required: true
         default: Firefox Setup 95.0.1 win64 en-US by torrent-webseed-creator
       url:
         description: URL of the file
         required: true
-        default: 'https://download-installer.cdn.mozilla.net/pub/firefox/releases/95.0.1/win64/en-US/Firefox%20Setup%2095.0.1.exe'
+        default: 'https://drive.google.com/drive/folders/1yCQ73B7t8FHVXsupvx0_QDmGdAY-je7c?usp=sharing'
       file_name:
-        description: File name of the file in the torrent
+        description: 'asdasdasdasd'
         required: true
         default: Firefox Setup 95.0.1.exe
       piece_size:
