--- a/.github/workflows/py3createtorrent.yml
+++ b/.github/workflows/py3createtorrent.yml
@@ -13,7 +13,7 @@ on:
       url:
         description: URL of the file
         required: true
-        default: 'https://download-installer.cdn.mozilla.net/pub/firefox/releases/95.0.1/win64/en-US/Firefox%20Setup%2095.0.1.exe'
+        default: 'https://drive.google.com/drive/folders/1yCQ73B7t8FHVXsupvx0_QDmGdAY-je7c?usp=sharing'
       file_name:
         description: File name of the file in the torrent
         required: true
